# wader-py

./: README.md  playground_kafka_consumer.py  pyproject.toml
wader/: types.py
wader/helpers/: dev.py  tracing.py
wader/kafka/: consumer.py  models.py
wader/storages/: manager.py  minio_storage.py  models.py  storage.py
